[package]
name = "blk-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
blake2 = "0.10"
byteorder = "1.4"
chrono = "0.4"
clap = { version = "4", features = ["env", "cargo"] }
devicemapper = { git = "https://github.com/stratis-storage/devicemapper-rs", branch = "master" }
epoll = "4"
gearhash = "0.1.3"
generic-array = "0.14"
serde_json = "1.0.96"
libc = "0.2"
lru = "0.10.1"
nix = {version = "0.29.0", features = ["signal", "ioctl"] }
nom = "7.1"
num_enum = "0.5.6"
rand = "0.8"
rand_chacha = "0.3"
roaring = "0.9"
serde = "1.0.136"
serde_derive = "1.0.136"
size-display = "0.1.4"
tempfile = "3"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }
# thinp = { path = "../thinp-for-dm-archive/" }
threadpool = "1.0"
toml = "0.5.8"
udev = "0.7"
walkdir = "2"
zstd = "0.11"
rkyv = "0.8"

[profile.release]
debug = 1
