[package]
name = "blk-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
blake2 = "0.10"
byteorder = "1.4"
chrono = "0.4"
clap = { version = "4.5.26", features = ["cargo", "env"] }
devicemapper = { git = "https://github.com/stratis-storage/devicemapper-rs", branch = "master" }
gearhash = "0.1.3"
generic-array = "0.14"
serde_json = "1.0.96"
libc = "0.2"
lru = "0.12.5"
nix = "0.29"
nom = "7.1"
num_enum = "0.7.3"
rand = "0.8"
rand_chacha = "0.3"
roaring = "0.10.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
size-display = "0.1.4"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }
# thinp = { path = "../thinp-for-dm-archive/" }
threadpool = "1.0"
udev = "0.9.1"
walkdir = "2"
zstd = "0.13.2"

[dev-dependencies]
duct = "0.13"
serde_json = "1.0"
tempfile = "3.16"

[features]
skip_cleanup = []

[profile.release]
debug = 1
